src/media/css/friends.styl
@import 'lib';

[data-page-type~="leaf"] .page {
    h1 {
        color: $flamin-hot-cheetos-orange;
        line-height: 1;
    }
}

[data-page-type~="profile"] .page {
    h1 .avatar {
        margin-right: 10px;
    }
}

$settings_avatar_size = 80px;
[data-page-type~="settings"] .page {
    .avatar-container {
        float: left;
        margin-right: 20px;
        .avatar {
            border-radius: $settings_avatar_size;
            height: $settings_avatar_size;
            width: $settings_avatar_size;
        }
        .edit-avatar {
            bottom: -5px;
            text-align: center;
        }
    }
    .edit-profile {
        display: inline-block;
        table {
            border-collapse: separate; 
            border-spacing: 10px;
            margin-bottom: 20px;
            label {
                font-size: 18px;
                line-height: 22px;
                margin-right: 10px;
                text-align: right;
            }
            input {
                line-height: normal;  // needed to align placeholder correctly
                max-width: 300px;
            }
        }
    }
}

[data-page-type~="friends"] .page {
    section {
        margin-top: 30px;
    }

    .user-search,
    .friends-list {
        width: 50%;
    }
    .user-search {
        margin-top: 15px;
    }
    .friends-list {
        list-style: none;
        padding: 15px 0 45px;

        li + li {
            margin-top: 10px;
        }
        .btn {
            float: right;
            margin-left: 15px;
        }
    }

    .profile-link {
        display: block;
        float: left;
        ellipsis();
        line-height: 32px;
    }
    .user-results .profile-link {
        width: 300px;
    }
    .avatar {
        float: left;
        margin-right: 7px;
    }
    .no-results:last-child {
        margin-bottom: 0;
    }
}

